# composional-histogram-descriptor

./: DefElem  DefVASP  ElemntDefinition_columns_description.txt  README.md  compositional_histogram_descriptor.ipynb  input_data.csv  install_and_example.ipynb  list_merge_descript  make_hist.py  make_hist_in.py  make_hist_in_ver2.py  make_hist_in_ver3.py  make_hist_in_ver4.py  make_hist_in_ver6.py  make_hist_in_ver7.py  pyproject.toml  sosei_descriptors_distribute.ipynb  testdata_test.csv
chemhist/: __init__.py  core.py
chemhist/data/: def_hist_settings.csv
