[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chemhist"
version = "0.1.0"
description = "Chemical composition histogram descriptor generator"
authors = [{name = "Masanobu Nakayama"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["pandas", "numpy"]

[tool.setuptools]
packages = ["chemhist"]

[tool.setuptools.package-data]
chemhist = ["data/*.csv"]
