[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemhist"
version = "0.1.0"
description = "Chemical composition histogram descriptor generator"
authors = [
    { name="Masanobu Nakayama" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas"
]

[tool.setuptools.packages.find]
include = ["chemhist*"]

[tool.setuptools.package-data]
chemhist = ["data/*.csv"]

[tool.setuptools]
include-package-data = true
zip-safe = false
